Source/JavaScriptCore/b3/air/AirEmitShuffle.cpp
@@ -41,6 +41,11 @@ namespace AirEmitShuffleInternal {
 static constexpr bool verbose = false;
 }
 
+enum ScratchMode {
+    FreezeScratch,
+    UpdateScratch,
+};
+
 template<typename Functor>
 Tmp findPossibleScratch(Code& code, Bank bank, const Functor& functor) {
     for (Reg reg : code.regsInPriorityOrder(bank)) {
@@ -359,7 +364,7 @@ Vector<Inst> emitShuffle(
         result.append(Inst(move, origin, pair.src(), pair.dst()));
     };
 
-    auto handleShift = [&] (Vector<ShufflePair>& shift) {
+    auto handleShift = [&] (Vector<ShufflePair>& shift, ScratchMode scratchMode) {
         // FIXME: We could optimize the spill behavior of the shifter by checking if any of the
         // shifts need spills. If they do, then we could try to get a register out here. Note that
         // this may fail where the current strategy succeeds: out here we need a register that does
@@ -372,7 +377,7 @@ Vector<Inst> emitShuffle(
             handleShiftPair(shift[i], 0);
 
         Arg lastDst = shift.last().dst();
-        if (lastDst.isTmp()) {
+        if (scratchMode == UpdateScratch && lastDst.isTmp()) {
             for (Arg& scratch : scratches) {
                 ASSERT(scratch != lastDst);
                 if (!scratch.isTmp()) {
@@ -390,7 +395,7 @@ Vector<Inst> emitShuffle(
     for (auto& entry : shifts) {
         Vector<ShufflePair>& shift = entry.value;
         if (shift.last().dst().isTmp())
-            handleShift(shift);
+            handleShift(shift, UpdateScratch);
         commitResult();
     }
 
@@ -398,15 +403,20 @@ Vector<Inst> emitShuffle(
     for (auto& entry : shifts) {
         Vector<ShufflePair>& shift = entry.value;
         if (!shift.last().dst().isTmp())
-            handleShift(shift);
+            handleShift(shift, UpdateScratch);
         commitResult();
     }
+
+    // From now on, we cannot use new shift destinations as scratches.
+    // The final order of these operations after all of the reversing is:
+    // [Fringe, Rotate]*, [Shift]*
+    // A fringe's last destination should not be clobbered.
 
     for (Rotate& rotate : rotates) {
         if (!rotate.fringe.isEmpty()) {
             // Make sure we do the fringe first! This won't clobber any of the registers that are
             // part of the rotation.
-            handleShift(rotate.fringe);
+            handleShift(rotate.fringe, FreezeScratch);
         }
         
         bool canSwap = false;
